--- a/templates/default/sv-php-fcgi-run.erb
+++ b/templates/default/sv-php-fcgi-run.erb
@@ -6,6 +6,6 @@ PHP_FCGI_MAX_REQUESTS=1000
 PHP_CGI=/usr/bin/php-cgi
 PHP_CGI_PARAMS="-c /etc/php5/cli/php.ini -b $BIND"
 PHP_CGI_NAME=`basename $PHP_CGI`
-PHP_CGI_ARGS="- USER=$USER PATH=/usr/bin PHP_FCGI_CHILDREN=$PHP_FCGI_CHILDREN PHP_FCGI_MAX_REQUESTS=$PHP_FCGI_MAX_REQUESTS $PHP_CGI $PHP_CGI_PARAMS"
+PHP_CGI_ARGS="- USER=$USER PATH=<%= node['php']['prefix_dir']%>/bin PHP_FCGI_CHILDREN=$PHP_FCGI_CHILDREN PHP_FCGI_MAX_REQUESTS=$PHP_FCGI_MAX_REQUESTS $PHP_CGI $PHP_CGI_PARAMS"
 RETVAL=0
 exec /usr/bin/env -- $PHP_CGI_ARGS
